--- a/client/shared/nav/nav.html
+++ b/client/shared/nav/nav.html
@@ -1,6 +1,6 @@
 <template name="nav">
 	<div class="nav">
-		<div class="navlogo"><img src="images/nav/m.svg"></div>
+		<div class="navlogo"><a href="/"><img src="images/nav/m.svg"></a></div>
 		<ul class="navgroups">
 			<li><a href="/bio">bíó</a></li>
 			<li><a href="/">tónleikar</a></li>
@@ -14,14 +14,34 @@
 	{{#if isLogin}}
 		{{> navLogin}}
 	{{/if}}
+	{{#if isRegister}}
+		{{> navRegister}}
+	{{/if}}
 </template> 
 
 <template name="navLogin">
+{{#if currentUser}}
+	<div class="loggedIn">
+		<p>Þú ert skráður inn!</p>
+		<button class="logoutbtn">Útskrá</button>
+	</div>
+{{else}}
 	<div class="login">
-		<input type="text" placeholder="Netfang">
-		<input type="password" placeholder="Lykilorð">
+		<input type="text" name="email" placeholder="Netfang">
+		<input type="password" name="pass" placeholder="Lykilorð">
 		<button class="loginbtn" type="submit" id="login-button">Innskrá</button>
 		<button class="regbtn" type="submit">Nýskrá</button>
 		<button class="fbbtn" type="submit"></button>
 	</div>
+{{/if}}
+
+</template>
+
+<template name="navRegister">
+	<form class="register">
+		<input type="text" name="email" placeholder="Netfang">
+		<input type="password" name="pass" placeholder="Lykilorð">
+		<input type="password" name="passAgain" placeholder="Lykilorð aftur">
+		<button class="loginbtn" type="submit" id="login-button">Nýskrá</button>
+	</form>
 </template>
