siunarutlit og dagateljari

--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -3,6 +3,7 @@
 		<form class="catform">
 		<ul>
 			<li><input type="text" name="nafn" placeholder="Nafn"></li>
+			<li><input type="text" name="year" placeholder="Ár" value="{{getYear}}"></li>
 			<li><input type="text" name="mynd" placeholder="Mynd"></li>
 			<li><input type="text" name="leikstjori" placeholder="Leikstjóri"></li>
 			<li><input type="text" name="trailer" placeholder="Trailer"></li>
@@ -13,6 +14,7 @@
 			<li><input type="text" name="leikarar" placeholder="Helstu leikarar"></li>
 			<li><input type="text" name="tungumal" placeholder="Tungumál"></li>
 			<li><input type="text" name="tegund" placeholder="Tegund"></li>
+			<li><input type="text" placeholder="EKKERT"></li>
 		</ul>
 		<button class="addbtn">ADD</button>
 		<button class="autobtn">AUTO</button>
