--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -14,7 +14,7 @@
 			<li><input type="text" name="leikarar" placeholder="Helstu leikarar"></li>
 			<li><input type="text" name="tungumal" placeholder="Tungumál"></li>
 			<li><input type="text" name="tegund" placeholder="Tegund"></li>
-			<li><input type="text" placeholder="EKKERT"></li>
+			<li><input type="text" name="pg" placeholder="Áhorfendahópur"></li>
 		</ul>
 		<button class="addbtn">ADD</button>
 		<button class="autobtn">AUTO</button>
