--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -50,6 +50,7 @@
 		<button class="editbtn">EDIT</button>
 		<button class="rembtn">EYÐA</button>
 		</form>
+		<button class="addTime">ADDTIME</button>
 		<img src="{{mynd}}"/>
 	</div>
 </template>
