--- a/client/shared/footer/footer.html
+++ b/client/shared/footer/footer.html
@@ -2,7 +2,7 @@
 	<div class="footer">
 		<ul class="office">
 			<li><h1>Hvar?</h1></li>
-			<li><img src="http://www.iconsdb.com/icons/preview/white/phone-70-xxl.png" width="15px" height="15px">+354 581 2345</li>
+			<li><img src="/images/nav/phone.svg" width="15px" height="15px">+354 581 2345</li>
 			<br>
 			<li>info@minnmidi.is</li>
 			<br>
